# geodiag

./: .gitignore  README  README.md  aboutus.html  development.html  documentation.html  geodiag  geodiag.ncl  index.html  installation.html  setup.sh  usage.html
_layouts/: default.html
_site/: index.html  installation.html
assets/css/: default.css
assets/texinfo/: geodiag.texinfo
data/map/: bou1_4l_low.dbf  bou1_4l_low.qix  bou1_4l_low.shx  hyd1_4l_low.dbf  hyd1_4l_low.qix  hyd1_4l_low.shp  province.dbf  province.qix  province.shp  province.shx
demos/: calc_eemd.ncl  draw_china_map.ncl
scripts/: manifest
scripts/cloud/: cloud_fraction.ncl  cloud_fraction_taylor_diagram.ncl
scripts/earth_energy/ceres-ebaf/: cloud_radiative_effect.ncl
scripts/enso/: driver.sh  nino34_wavelet.ncl
scripts/utils/: geodiag_cmd_utils.sh  geodiag_ncl_utils.ncl  geodiag_plot_utils.ncl
tools/: bash_utils.sh  build.sh  calc_mean_annual_cycle.ncl  geodiag_cmd_utils.sh  manifest
tools/cmor/: CMakeLists.txt  README.md
tools/cmor/src/: geodiag_cmor.h  geodiag_cmor_commons.h  model.config
tools/cmor/src/ModelData/: ModelData.cpp  ModelData.h  VertCoord.cpp  VertCoord.h
tools/cmor/src/driver/: geodiag_cmor_driver.cpp
tools/data/map/: bou1_4l_low.shp  hyd1_4l_low.shx
tools/dataset/: cat_var.ncl  div_var.ncl  lib_calc_region_mean.ncl  lib_select_season.ncl  query_end_time.ncl  query_start_time.ncl  query_var.ncl  select_season.ncl
tools/eemd/: Makefile  eemd.c  eemd.h  eemd.ncl  eemd_ncl_wrapper.c  spline.c  spline.h
tools/plot/: china_map.ncl  default_resource.ncl  message.ncl
tools/statistics/: calc_daily_anom.ncl  calc_eof.ncl  calc_variance.ncl  run_lanczos_filter.ncl
tools/utils/: geodiag_plot_utils.ncl  lib_calc_lat_bnds.ncl  lib_calc_lat_wgts.ncl  lib_check_cmd_arg.ncl  lib_deg_rad_conversion.ncl  lib_select_region.ncl  lib_select_season.ncl
tools/utils/map/: china_mask.nc
tools/utils/plot_utils/: china_map.ncl  data_file.ncl  default_resource.ncl  message.ncl  select_region.ncl  taylor_diagram.ncl
